# FastPCB-Engine

./: .gitignore  CMakeLists.txt  README.md  SUBMISSION_SUMMARY.md  benchmark.cpp  commit.ps1  commit.sh  main.cpp  test_dependency_graph.py
docs/: DEPENDENCY_GRAPH.md  OPTIMIZATION.md  TECHNICAL_DESIGN.md
include/: DependencyGraph.h  PCBBondWire.h  PCBComponent.h  PCBConfig.h  PCBDataModel.h  PCBDesignRule.h  PCBDiagnostics.h  PCBGraphNode.h  PCBLoader.h  PCBMemoryPool.h  PCBParamGraph.h  PCBRefPool.h  PCBSelectionSet.h  PCBShapeAttribute.h  PCBSurface.h  PCBTrace.h  PCBTransaction.h  PCBVariablePool.h  PCBVia.h
src/: DependencyGraph.cpp  PCBBondWire.cpp  PCBComponent.cpp  PCBDataModel.cpp  PCBDesignRule.cpp  PCBGraphNode.cpp  PCBLoader.cpp  PCBMemoryPool.cpp  PCBParamGraph.cpp  PCBRefPool.cpp  PCBSelectionSet.cpp  PCBShapeAttribute.cpp  PCBSurface.cpp  PCBTrace.cpp  PCBVia.cpp
tests/: CMakeLists.txt  test_components.cpp  test_dependency_graph.cpp  test_dependency_graph_standalone.cpp  test_memory_pool.cpp  test_paramgraph.cpp
